<resources>
    <string name="app_name">Beproductiv</string>
    <string name="title_activity_settings">Settings</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- About Me Preferences -->
    <string name="about_me_header">About Me</string>
    <string name="username_title">Name</string>

    <!-- Intervals Preferences -->
    <string name="intervals_header">Timer</string>
    <string name="intervals_focus">Focus</string>
    <string name="intervals_break">Break</string>
    <string name="intervals_long_break">Long Break</string>

    <!-- Other Preferences -->
    <string name="other_header">Other</string>
    <string name="other_auto_start_intervals">Auto-start intervals</string>
    <string name="other_notifications">Enable notifications</string>
    <string name="other_show_completed">Show completed</string>

    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="label_select_task">Select</string>
    <string name="choose_a_task">Select a to-do item</string>
    <string name="label_complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="to_do">To-Do</string>
    <string name="app_title">Beproductiv</string>
    <string name="faqQuestion1">How does Beproductiv work?</string>
    <string name="faqAnswer1">Beproductiv was created to help you stay focused and take necessary breaks while working hard. A session consists of three focus time periods with two breaks in between, one short and one long. You can adjust the duration of these time periods in the settings.</string>
    <string name="faqQuestion2">Should I select a to-do?</string>
    <string name="faqAnswer2">Selecting a to-do item is not necessary to make use of the app. You can keep a backlog of tasks for your reference so you have specific goals in mind while working hard.</string>
    <string name="faqQuestion3">How to edit or delete a to-do?</string>
    <string name="faqAnswer3">Navigate to the to-do tab of the app. Tap the to-do item you want to modify. Click the pencil edit button. Make your desired changes or delete the to-do item by tapping the red garbage can.</string>
    <string name="faqQuestion4">Who made this awesome app?</string>
    <string name="faqAnswer4">This app was created by three BCIT students: Eric Huang, Andrey Goryelov, and Noah MacRitchie.</string>
    <string name="label_add_todo">Add Todo</string>
    <string name="label_edit_todo">Edit Todo</string>
    <string name="label_break">Break</string>
    <string name="label_focus">Focus</string>
    <string name="label_form_toast">Enter to-do name and description</string>
    <string name="faqHeader">FAQ</string>
    <string name="add_todo">Add Todo</string>
    <string name="name_text">Name</string>
    <string name="description_text">Description</string>
    <string name="save_button_text">Save</string>
</resources>