<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/intervals_header"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false" >
        <ListPreference
            app:layout="@layout/preference_card_top"
            app:defaultValue="1800"
            app:entries="@array/interval_focus_entries"
            app:entryValues="@array/interval_focus_values"
            app:key="interval_focus"
            app:title="@string/intervals_focus"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            />

        <ListPreference
            app:layout="@layout/preference_card_middle"
            app:defaultValue="300"
            app:entries="@array/interval_break_entries"
            app:entryValues="@array/interval_break_values"
            app:key="interval_break"
            app:title="@string/intervals_break"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:layout="@layout/preference_card_middle"
            app:defaultValue="900"
            app:entries="@array/interval_long_break_entries"
            app:entryValues="@array/interval_long_break_values"
            app:key="interval_long_break"
            app:title="@string/intervals_long_break"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:layout="@layout/preference_card_bottom"
            app:entries="@array/auto_start_interval_entries"
            app:entryValues="@array/auto_start_interval_values"
            app:defaultValue="start_immediately"
            app:key="auto_start_interval"
            app:title="@string/other_auto_start_intervals"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="To-do"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false" >

        <SwitchPreference
            app:layout="@layout/preference_card_switch_default"
            app:defaultValue="false"
            app:title="@string/other_show_completed"
            app:key="show_completed"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/other_header"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false" >

        <SwitchPreference
            app:layout="@layout/preference_card_switch_default"
            app:defaultValue="true"
            app:title="@string/other_notifications"
            app:key="notifications"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>