<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background"
    tools:context=".FaqActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/faq_back_button"
            style="@style/IconButton"
            android:paddingStart="16dp"
            android:drawableLeft="@drawable/ic_outline_arrow_back_24"
            app:tint="@color/onBackgroundText" />

        <TextView
            android:id="@+id/todo_form_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="FAQ"
            style="@style/DefaultTextView"
            android:textSize="25sp"/>

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        style="@style/FAQCard"
        app:shapeAppearance="@style/RoundedCorners">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqQuestion1"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqAnswer1"
                android:textColor="@color/onBackgroundText"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        style="@style/FAQCard"
        app:shapeAppearance="@style/RoundedCorners">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqQuestion2"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqAnswer2"
                android:textColor="@color/onBackgroundText"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        style="@style/FAQCard"
        app:shapeAppearance="@style/RoundedCorners">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqQuestion3"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqAnswer3"
                android:textColor="@color/onBackgroundText"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        style="@style/FAQCard"
        app:shapeAppearance="@style/RoundedCorners">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqQuestion4"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqAnswer4"
                android:textColor="@color/onBackgroundText"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>